# python-practice

./: .gitignore  .pre-commit-config.yaml  .tool-versions  CLAUDE.md  Makefile  README.md  app.py  hello.py  pyproject.toml
.github/workflows/: ci.yml
src/: __init__.py  app.py
tests/: conftest.py  test_app.py
