[tool.poetry]
name = "python-practice"
version = "0.1.0"
description = ""
authors = ["t-i-0414 <gutlo.ol0414@gmail.com>"]
readme = "README.md"
packages = [{ include = "python_practice" }]

[tool.poetry.dependencies]
python = "^3.11"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
mypy = "^1.5.1"
black = "^23.7.0"
isort = "^5.12.0"
numpy = "^1.25.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
