[project]
name = "python-practice"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.13.0"
dependencies = ["pandas>=2.2.3", "pyright>=1.1.389"]

[dependency-groups]
dev = [
  "mypy>=1.16.0",
  "pre-commit>=4.2.0",
  "pytest>=8.4.0",
  "pytest-mock>=3.14.1",
  "ruff>=0.11.13",
]

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = [".git", ".ruff_cache", ".venv", ".vscode"]
