[project]
name = "python-practice"
version = "0.1.0"
description = "Python project boilerplate with modern tooling (uv, ruff, mypy, pytest)"
readme = "README.md"
requires-python = "==3.13.0"
dependencies = ["pandas>=2.2.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
  "mypy>=1.16.0",
  "pre-commit>=4.2.0",
  "pytest>=8.4.0",
  "pytest-cov>=6.0.0",
  "pytest-mock>=3.14.1",
  "ruff>=0.11.13",
]

[tool.mypy]
python_version = "3.13"
ignore_missing_imports = true
strict = true

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = [".git", ".ruff_cache", ".venv", ".vscode"]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.lint.isort]
known-first-party = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
